--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vite-vanilla-ts-lib-starter",
+  "name": "searchable",
   "private": true,
-  "version": "0.0.6",
-  "module": "./dist/vite-vanilla-ts-lib-starter.js",
+  "version": "0.0.1",
+  "module": "./dist/searchable.js",
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/vite-vanilla-ts-lib-starter.js"
+      "import": "./dist/searchable.js"
     },
     "./dist/": {
       "import": "./dist/"
@@ -27,30 +27,34 @@
     "uninstall-husky": "npm uninstall husky --no-save && git config --unset core.hooksPath && npx rimraf .husky"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@types/jsdom": "^27.0.0",
-    "@types/node": "^24.0.10",
+    "@types/node": "^24.8.1",
     "@vitest/coverage-v8": "^3.2.4",
     "copyfiles": "^2.4.1",
     "dts-bundle-generator": "^9.5.1",
-    "eslint": "^9.30.1",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.5.1",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
-    "jiti": "^2.4.2",
-    "lint-staged": "^16.1.2",
+    "jiti": "^2.6.1",
+    "jsdom": "^27.0.1",
+    "lint-staged": "^16.2.4",
     "postcss": "^8.5.6",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
-    "stylelint": "^16.21.1",
+    "sass-embedded": "^1.93.2",
+    "stylelint": "^16.25.0",
     "stylelint-config-recommended": "^17.0.0",
     "stylelint-config-sass-guidelines": "^12.1.0",
     "stylelint-order": "^7.0.0",
     "stylelint-prettier": "^5.0.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.36.0",
-    "vite": "^7.0.3",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1",
+    "vite": "^7.1.10",
     "vitest": "^3.2.4"
   }
 }
